osdeploy/archived_configs/complete-bridgy-solution.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: bridgy-main
spec:
  replicas: 1
  selector:
    app: bridgy-main
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: bridgy-main
    spec:
      containers:
      - name: bridgy-main
        image: bridgy-main:latest
        ports:
        - containerPort: 8443
        resources:
          limits:
            memory: 4Gi
          requests:
            memory: 2Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  triggers:
  - type: ConfigChange
  - type: ImageChange
    imageChangeParams:
      automatic: true
      containerNames:
      - bridgy-main
      from:
        kind: ImageStreamTag
        name: bridgy-main:latest
