osdeploy/archived_configs/debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bridgy-debug
spec:
  containers:
  - name: bridgy-debug
    image: image-registry.openshift-image-registry.svc:5000/demo1/bridgy-main:latest
    command: ["sleep", "3600"]
  restartPolicy: Never
