osdeploy/archived_configs/fix-bridgy-structure.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: bridgy-main
spec:
  template:
    spec:
      containers:
        - name: bridgy-main
          command:
            - /bin/bash
            - -c
            - |
              [...]
          volumeMounts:
            - name: bridgy-tools
              mountPath: /mnt/tools
            - name: bridgy-tools-init
              mountPath: /mnt/tools-init
      volumes:
        - name: bridgy-tools
          configMap:
            name: bridgy-main-tools
            defaultMode: 0755
        - name: bridgy-tools-init
          configMap:
            name: bridgy-main-tools-init
            defaultMode: 0755
