osdeploy/archived_configs/fix-bridgy-tools.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: bridgy-main
spec:
  template:
    spec:
      containers:
        - name: bridgy-main
          volumeMounts:
            - name: bridgy-tools
              mountPath: /app/tools
      volumes:
        - name: bridgy-tools
          configMap:
            name: bridgy-main-tools
            defaultMode: 0755
