osdeploy/archived_configs/bridgy-main-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bridgy-main-nodeport
  labels:
    io.kompose.service: bridgy-main
    app: bridgy-main
spec:
  type: NodePort
  ports:
  - name: "bridgy-main"
    port: 8443
    targetPort: 8443
    nodePort: 30843  # Using a standard NodePort range (30000-32767)
  selector:
    io.kompose.service: bridgy-main
