osdeploy/archived_configs/bridgy-main-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: bridgy-main
  labels:
    app: bridgy-main
    io.kompose.service: bridgy-main
spec:
  port:
    targetPort: 8443
  to:
    kind: Service
    name: bridgy-main
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
