osdeploy/archived_configs/bridgy-unified-deployment.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: bridgy-main
  labels:
    app: bridgy-main
spec:
  replicas: 1
  selector:
    app: bridgy-main
  strategy:
    type: Rolling
    rollingParams:
      timeoutSeconds: 600
      maxSurge: "25%"
      maxUnavailable: "25%"
  template:
    metadata:
      labels:
        app: bridgy-main
    spec:
      volumes:
      - name: init-script
        configMap:
          name: bridgy-init-script
          defaultMode: 0777
      containers:
      - name: bridgy-main
        image: image-registry.openshift-image-registry.svc:5000/demo1/bridgy-main:latest
        command: ["/bin/bash", "/scripts/init.sh"]
        ports:
        - containerPort: 8443
          protocol: TCP
        resources:
          limits:
            memory: 4Gi
          requests:
            memory: 2Gi
        volumeMounts:
        - name: init-script
          mountPath: /scripts
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  triggers:
  - type: ConfigChange
  - type: ImageChange
    imageChangeParams:
      automatic: true
      containerNames:
      - bridgy-main
      from:
        kind: ImageStreamTag
        namespace: demo1
        name: bridgy-main:latest
---
apiVersion: v1
kind: Service
metadata:
  name: bridgy-main
  labels:
    app: bridgy-main
spec:
  ports:
  - port: 8443
    targetPort: 8443
    protocol: TCP
  selector:
    app: bridgy-main
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: bridgy-main
  labels:
    app: bridgy-main
spec:
  host: bridgy-main-demo1.apps.ocp.devnet
  to:
    kind: Service
    name: bridgy-main
  port:
    targetPort: 8443
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
